# screen-recorder

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  pipewire.cpp  pipewire.h  portal.cpp  portal.h  screencast-portal.cpp  screencast-portal.hpp  utils.h
